# protobuf-doc-as-options

./: Cargo.toml  Readme.md
src/: comments2option.rs  comments2option_cli.rs  editor.rs  lib.rs  option2comments.rs  path_resolver.rs
src/fixtures/: basic.expected.proto  basic.proto  doc.proto  multiline.expected.proto  multiline.proto  nested.expected.proto  nested.proto  siblings.expected.proto  siblings.proto
src/path_resolver/: mod.rs  prost.rs  protobuf.rs
src/tests/: compare_fds.rs  mod.rs
