[package]
name = "protox-doc"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.9", features = ["derive"] }
glob = "0.3.1"
miette = { version = "7.2.0", features = ["fancy"] }
pretty_assertions = "1.4.0"
prost-reflect = { version = "0.14.0", features = ["text-format"] }
protobuf = "3.5.0"
protox = "0.7.0"
regex = "1.10.5"
shellexpand = "3.1.0"

[dev-dependencies]
rand = "0.8.5"
